// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webpack returns for development 1`] = `
Object {
  "es5": Object {
    "devtool": "eval-source-map",
    "entry": Object {
      "site-1": Array [
        "webpack-hot-middleware/client",
        "babel-polyfill",
        "./build/bundling/entry-points/site-1/client.js",
      ],
      "site-2": Array [
        "webpack-hot-middleware/client",
        "babel-polyfill",
        "./build/bundling/entry-points/site-1/client.js",
      ],
    },
    "externals": Object {
      "he": "{}",
      "node-fetch": "window.fetch",
      "url": "{ URL: window.URL }",
    },
    "mode": "development",
    "module": Object {
      "rules": Array [
        Object {
          "test": /\\\\\\.\\(j\\|t\\)sx\\?\\$/,
          "use": Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "cacheDirectory": true,
              "cacheIdentifier": "123",
              "plugins": Array [],
              "presets": Array [
                "es5-development",
              ],
            },
          },
        },
        Object {
          "test": /\\\\\\.\\(png\\|jpe\\?g\\|gif\\|svg\\)\\$/,
          "use": Array [
            Object {
              "loader": "file-loader",
              "options": Object {
                "emitFile": true,
                "name": [Function],
                "outputPath": "images",
              },
            },
          ],
        },
        Object {
          "test": /\\\\\\.css\\$/,
          "use": "raw-loader",
        },
        Object {
          "test": /\\\\\\.\\(woff\\(2\\)\\?\\|ttf\\|eot\\)\\(\\\\\\?v=\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+\\)\\?\\$/,
          "use": Object {
            "loader": "url-loader",
            "options": Object {
              "emitFile": true,
              "limit": 8192,
              "name": [Function],
              "outputPath": "fonts",
            },
          },
        },
      ],
    },
    "name": "client",
    "output": Object {
      "chunkFilename": "[name].es5.js",
      "filename": "[name].es5.js",
      "path": "build/static",
      "publicPath": "/static/",
    },
    "performance": Object {
      "hints": "warning",
      "maxAssetSize": 500000,
      "maxEntrypointSize": 500000,
    },
    "plugins": Array [
      BundleAnalyzerPlugin {
        "logger": Logger {
          "activeLevels": Set {
            "silent",
          },
        },
        "opts": Object {
          "analyzerHost": "127.0.0.1",
          "analyzerMode": "static",
          "analyzerPort": 8888,
          "defaultSizes": "parsed",
          "excludeAssets": null,
          "generateStatsFile": false,
          "logLevel": "silent",
          "openAnalyzer": false,
          "reportFilename": "../analyze/es5-development.html",
          "startAnalyzer": true,
          "statsFilename": "stats.json",
          "statsOptions": null,
        },
        "server": null,
      },
      WatchIgnorePlugin {
        "paths": Array [
          /build/,
        ],
      },
      IgnorePlugin {
        "checkIgnore": [Function],
        "options": Object {
          "contextRegExp": undefined,
          "resourceRegExp": /\\^encoding\\$/,
        },
      },
      HotModuleReplacementPlugin {
        "fullBuildTimeout": 200,
        "multiStep": undefined,
        "options": Object {},
        "requestTimeout": 10000,
      },
      LoadablePlugin {
        "compiler": null,
        "handleEmit": [Function],
        "opts": Object {
          "filename": "../bundling/chunks.es5.json",
          "outputAsset": true,
          "path": undefined,
          "writeToDisk": undefined,
        },
        "writeAssetsFile": [Function],
      },
    ],
    "resolve": Object {
      "alias": Object {
        "any-promise": "promise-monofill",
        "build": "build",
        "ramda/src": "ramda/es",
      },
      "extensions": Array [
        ".js",
        ".jsx",
        ".ts",
        ".tsx",
      ],
    },
    "target": "web",
  },
  "module": Object {
    "devtool": "eval-source-map",
    "entry": Object {
      "site-1": Array [
        "webpack-hot-middleware/client",
        "./build/bundling/entry-points/site-1/client.js",
      ],
      "site-2": Array [
        "webpack-hot-middleware/client",
        "./build/bundling/entry-points/site-1/client.js",
      ],
    },
    "externals": Object {
      "he": "{}",
      "node-fetch": "window.fetch",
      "url": "{ URL: window.URL }",
    },
    "mode": "development",
    "module": Object {
      "rules": Array [
        Object {
          "test": /\\\\\\.\\(j\\|t\\)sx\\?\\$/,
          "use": Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "cacheDirectory": true,
              "cacheIdentifier": "123",
              "plugins": Array [],
              "presets": Array [
                "module-development",
              ],
            },
          },
        },
        Object {
          "test": /\\\\\\.\\(png\\|jpe\\?g\\|gif\\|svg\\)\\$/,
          "use": Array [
            Object {
              "loader": "file-loader",
              "options": Object {
                "emitFile": true,
                "name": [Function],
                "outputPath": "images",
              },
            },
          ],
        },
        Object {
          "test": /\\\\\\.css\\$/,
          "use": "raw-loader",
        },
        Object {
          "test": /\\\\\\.\\(woff\\(2\\)\\?\\|ttf\\|eot\\)\\(\\\\\\?v=\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+\\)\\?\\$/,
          "use": Object {
            "loader": "url-loader",
            "options": Object {
              "emitFile": true,
              "limit": 8192,
              "name": [Function],
              "outputPath": "fonts",
            },
          },
        },
      ],
    },
    "name": "client",
    "output": Object {
      "chunkFilename": "[name].module.js",
      "filename": "[name].module.js",
      "path": "build/static",
      "publicPath": "/static/",
    },
    "performance": Object {
      "hints": "warning",
      "maxAssetSize": 500000,
      "maxEntrypointSize": 500000,
    },
    "plugins": Array [
      BundleAnalyzerPlugin {
        "logger": Logger {
          "activeLevels": Set {
            "silent",
          },
        },
        "opts": Object {
          "analyzerHost": "127.0.0.1",
          "analyzerMode": "static",
          "analyzerPort": 8888,
          "defaultSizes": "parsed",
          "excludeAssets": null,
          "generateStatsFile": false,
          "logLevel": "silent",
          "openAnalyzer": false,
          "reportFilename": "../analyze/module-development.html",
          "startAnalyzer": true,
          "statsFilename": "stats.json",
          "statsOptions": null,
        },
        "server": null,
      },
      WatchIgnorePlugin {
        "paths": Array [
          /build/,
        ],
      },
      IgnorePlugin {
        "checkIgnore": [Function],
        "options": Object {
          "contextRegExp": undefined,
          "resourceRegExp": /\\^encoding\\$/,
        },
      },
      HotModuleReplacementPlugin {
        "fullBuildTimeout": 200,
        "multiStep": undefined,
        "options": Object {},
        "requestTimeout": 10000,
      },
      LoadablePlugin {
        "compiler": null,
        "handleEmit": [Function],
        "opts": Object {
          "filename": "../bundling/chunks.module.json",
          "outputAsset": true,
          "path": undefined,
          "writeToDisk": undefined,
        },
        "writeAssetsFile": [Function],
      },
    ],
    "resolve": Object {
      "alias": Object {
        "any-promise": "promise-monofill",
        "build": "build",
        "ramda/src": "ramda/es",
      },
      "extensions": Array [
        ".js",
        ".jsx",
        ".ts",
        ".tsx",
      ],
    },
    "target": "web",
  },
  "server": Object {
    "devtool": "eval-source-map",
    "entry": "./build/bundling/entry-points/server.js",
    "externals": Object {},
    "mode": "development",
    "module": Object {
      "rules": Array [
        Object {
          "test": /\\\\\\.\\(j\\|t\\)sx\\?\\$/,
          "use": Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "cacheDirectory": true,
              "cacheIdentifier": "123",
              "plugins": Array [],
              "presets": Array [
                "server-development",
              ],
            },
          },
        },
        Object {
          "test": /\\\\\\.\\(png\\|jpe\\?g\\|gif\\|svg\\)\\$/,
          "use": Array [
            Object {
              "loader": "file-loader",
              "options": Object {
                "emitFile": false,
                "name": [Function],
                "outputPath": "images",
              },
            },
          ],
        },
        Object {
          "test": /\\\\\\.css\\$/,
          "use": "raw-loader",
        },
        Object {
          "test": /\\\\\\.\\(woff\\(2\\)\\?\\|ttf\\|eot\\)\\(\\\\\\?v=\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+\\)\\?\\$/,
          "use": Object {
            "loader": "url-loader",
            "options": Object {
              "emitFile": false,
              "limit": 8192,
              "name": [Function],
              "outputPath": "fonts",
            },
          },
        },
      ],
    },
    "name": "server",
    "output": Object {
      "filename": "server.js",
      "libraryTarget": "commonjs2",
      "path": "build/",
      "publicPath": "/static/",
    },
    "performance": Object {
      "hints": "warning",
      "maxAssetSize": 5000000,
      "maxEntrypointSize": 5000000,
    },
    "plugins": Array [
      BundleAnalyzerPlugin {
        "logger": Logger {
          "activeLevels": Set {
            "silent",
          },
        },
        "opts": Object {
          "analyzerHost": "127.0.0.1",
          "analyzerMode": "static",
          "analyzerPort": 8888,
          "defaultSizes": "parsed",
          "excludeAssets": null,
          "generateStatsFile": false,
          "logLevel": "silent",
          "openAnalyzer": false,
          "reportFilename": "analyze/server-development.html",
          "startAnalyzer": true,
          "statsFilename": "stats.json",
          "statsOptions": null,
        },
        "server": null,
      },
      WatchIgnorePlugin {
        "paths": Array [
          /build/,
        ],
      },
      IgnorePlugin {
        "checkIgnore": [Function],
        "options": Object {
          "contextRegExp": undefined,
          "resourceRegExp": /\\^encoding\\$/,
        },
      },
      LimitChunkCountPlugin {
        "options": Object {
          "maxChunks": 1,
        },
      },
    ],
    "resolve": Object {
      "alias": Object {
        "any-promise": "promise-monofill",
        "build": "build",
        "ramda/src": "ramda/es",
      },
      "extensions": Array [
        ".js",
        ".jsx",
        ".ts",
        ".tsx",
      ],
    },
    "target": "node",
  },
}
`;

exports[`Webpack returns for production 1`] = `
Object {
  "es5": Object {
    "devtool": false,
    "entry": Object {
      "site-1": Array [
        "babel-polyfill",
        "./build/bundling/entry-points/site-1/client.js",
      ],
      "site-2": Array [
        "babel-polyfill",
        "./build/bundling/entry-points/site-1/client.js",
      ],
    },
    "externals": Object {
      "he": "{}",
      "node-fetch": "window.fetch",
      "url": "{ URL: window.URL }",
    },
    "mode": "production",
    "module": Object {
      "rules": Array [
        Object {
          "test": /\\\\\\.\\(j\\|t\\)sx\\?\\$/,
          "use": Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "cacheDirectory": true,
              "cacheIdentifier": "123",
              "plugins": Array [],
              "presets": Array [
                "es5-production",
              ],
            },
          },
        },
        Object {
          "test": /\\\\\\.\\(png\\|jpe\\?g\\|gif\\|svg\\)\\$/,
          "use": Array [
            Object {
              "loader": "file-loader",
              "options": Object {
                "emitFile": true,
                "name": [Function],
                "outputPath": "images",
              },
            },
          ],
        },
        Object {
          "test": /\\\\\\.css\\$/,
          "use": "raw-loader",
        },
        Object {
          "test": /\\\\\\.\\(woff\\(2\\)\\?\\|ttf\\|eot\\)\\(\\\\\\?v=\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+\\)\\?\\$/,
          "use": Object {
            "loader": "url-loader",
            "options": Object {
              "emitFile": true,
              "limit": 8192,
              "name": [Function],
              "outputPath": "fonts",
            },
          },
        },
      ],
    },
    "name": "client",
    "output": Object {
      "chunkFilename": "[name].es5.[chunkhash].js",
      "filename": "[name].es5.[chunkhash].js",
      "path": "build/static",
      "publicPath": "/static/",
    },
    "performance": Object {
      "hints": "warning",
      "maxAssetSize": 500000,
      "maxEntrypointSize": 500000,
    },
    "plugins": Array [
      BundleAnalyzerPlugin {
        "logger": Logger {
          "activeLevels": Set {
            "silent",
          },
        },
        "opts": Object {
          "analyzerHost": "127.0.0.1",
          "analyzerMode": "static",
          "analyzerPort": 8888,
          "defaultSizes": "parsed",
          "excludeAssets": null,
          "generateStatsFile": false,
          "logLevel": "silent",
          "openAnalyzer": false,
          "reportFilename": "../analyze/es5-production.html",
          "startAnalyzer": true,
          "statsFilename": "stats.json",
          "statsOptions": null,
        },
        "server": null,
      },
      WatchIgnorePlugin {
        "paths": Array [
          /build/,
        ],
      },
      IgnorePlugin {
        "checkIgnore": [Function],
        "options": Object {
          "contextRegExp": undefined,
          "resourceRegExp": /\\^encoding\\$/,
        },
      },
      LoadablePlugin {
        "compiler": null,
        "handleEmit": [Function],
        "opts": Object {
          "filename": "../bundling/chunks.es5.json",
          "outputAsset": true,
          "path": undefined,
          "writeToDisk": undefined,
        },
        "writeAssetsFile": [Function],
      },
    ],
    "resolve": Object {
      "alias": Object {
        "any-promise": "promise-monofill",
        "build": "build",
        "ramda/src": "ramda/es",
      },
      "extensions": Array [
        ".js",
        ".jsx",
        ".ts",
        ".tsx",
      ],
    },
    "target": "web",
  },
  "module": Object {
    "devtool": false,
    "entry": Object {
      "site-1": Array [
        "./build/bundling/entry-points/site-1/client.js",
      ],
      "site-2": Array [
        "./build/bundling/entry-points/site-1/client.js",
      ],
    },
    "externals": Object {
      "he": "{}",
      "node-fetch": "window.fetch",
      "url": "{ URL: window.URL }",
    },
    "mode": "production",
    "module": Object {
      "rules": Array [
        Object {
          "test": /\\\\\\.\\(j\\|t\\)sx\\?\\$/,
          "use": Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "cacheDirectory": true,
              "cacheIdentifier": "123",
              "plugins": Array [],
              "presets": Array [
                "module-production",
              ],
            },
          },
        },
        Object {
          "test": /\\\\\\.\\(png\\|jpe\\?g\\|gif\\|svg\\)\\$/,
          "use": Array [
            Object {
              "loader": "file-loader",
              "options": Object {
                "emitFile": true,
                "name": [Function],
                "outputPath": "images",
              },
            },
          ],
        },
        Object {
          "test": /\\\\\\.css\\$/,
          "use": "raw-loader",
        },
        Object {
          "test": /\\\\\\.\\(woff\\(2\\)\\?\\|ttf\\|eot\\)\\(\\\\\\?v=\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+\\)\\?\\$/,
          "use": Object {
            "loader": "url-loader",
            "options": Object {
              "emitFile": true,
              "limit": 8192,
              "name": [Function],
              "outputPath": "fonts",
            },
          },
        },
      ],
    },
    "name": "client",
    "output": Object {
      "chunkFilename": "[name].module.[chunkhash].js",
      "filename": "[name].module.[chunkhash].js",
      "path": "build/static",
      "publicPath": "/static/",
    },
    "performance": Object {
      "hints": "warning",
      "maxAssetSize": 500000,
      "maxEntrypointSize": 500000,
    },
    "plugins": Array [
      BundleAnalyzerPlugin {
        "logger": Logger {
          "activeLevels": Set {
            "silent",
          },
        },
        "opts": Object {
          "analyzerHost": "127.0.0.1",
          "analyzerMode": "static",
          "analyzerPort": 8888,
          "defaultSizes": "parsed",
          "excludeAssets": null,
          "generateStatsFile": false,
          "logLevel": "silent",
          "openAnalyzer": false,
          "reportFilename": "../analyze/module-production.html",
          "startAnalyzer": true,
          "statsFilename": "stats.json",
          "statsOptions": null,
        },
        "server": null,
      },
      WatchIgnorePlugin {
        "paths": Array [
          /build/,
        ],
      },
      IgnorePlugin {
        "checkIgnore": [Function],
        "options": Object {
          "contextRegExp": undefined,
          "resourceRegExp": /\\^encoding\\$/,
        },
      },
      LoadablePlugin {
        "compiler": null,
        "handleEmit": [Function],
        "opts": Object {
          "filename": "../bundling/chunks.module.json",
          "outputAsset": true,
          "path": undefined,
          "writeToDisk": undefined,
        },
        "writeAssetsFile": [Function],
      },
    ],
    "resolve": Object {
      "alias": Object {
        "any-promise": "promise-monofill",
        "build": "build",
        "ramda/src": "ramda/es",
      },
      "extensions": Array [
        ".js",
        ".jsx",
        ".ts",
        ".tsx",
      ],
    },
    "target": "web",
  },
  "server": Object {
    "devtool": false,
    "entry": "./build/bundling/entry-points/server.js",
    "externals": Object {},
    "mode": "production",
    "module": Object {
      "rules": Array [
        Object {
          "test": /\\\\\\.\\(j\\|t\\)sx\\?\\$/,
          "use": Object {
            "loader": "babel-loader",
            "options": Object {
              "babelrc": false,
              "cacheDirectory": true,
              "cacheIdentifier": "123",
              "plugins": Array [],
              "presets": Array [
                "server-production",
              ],
            },
          },
        },
        Object {
          "test": /\\\\\\.\\(png\\|jpe\\?g\\|gif\\|svg\\)\\$/,
          "use": Array [
            Object {
              "loader": "file-loader",
              "options": Object {
                "emitFile": false,
                "name": [Function],
                "outputPath": "images",
              },
            },
          ],
        },
        Object {
          "test": /\\\\\\.css\\$/,
          "use": "raw-loader",
        },
        Object {
          "test": /\\\\\\.\\(woff\\(2\\)\\?\\|ttf\\|eot\\)\\(\\\\\\?v=\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+\\)\\?\\$/,
          "use": Object {
            "loader": "url-loader",
            "options": Object {
              "emitFile": false,
              "limit": 8192,
              "name": [Function],
              "outputPath": "fonts",
            },
          },
        },
      ],
    },
    "name": "server",
    "output": Object {
      "filename": "server.js",
      "libraryTarget": "commonjs2",
      "path": "build/",
      "publicPath": "/static/",
    },
    "performance": Object {
      "hints": "warning",
      "maxAssetSize": 5000000,
      "maxEntrypointSize": 5000000,
    },
    "plugins": Array [
      BundleAnalyzerPlugin {
        "logger": Logger {
          "activeLevels": Set {
            "silent",
          },
        },
        "opts": Object {
          "analyzerHost": "127.0.0.1",
          "analyzerMode": "static",
          "analyzerPort": 8888,
          "defaultSizes": "parsed",
          "excludeAssets": null,
          "generateStatsFile": false,
          "logLevel": "silent",
          "openAnalyzer": false,
          "reportFilename": "analyze/server-production.html",
          "startAnalyzer": true,
          "statsFilename": "stats.json",
          "statsOptions": null,
        },
        "server": null,
      },
      WatchIgnorePlugin {
        "paths": Array [
          /build/,
        ],
      },
      IgnorePlugin {
        "checkIgnore": [Function],
        "options": Object {
          "contextRegExp": undefined,
          "resourceRegExp": /\\^encoding\\$/,
        },
      },
      LimitChunkCountPlugin {
        "options": Object {
          "maxChunks": 1,
        },
      },
    ],
    "resolve": Object {
      "alias": Object {
        "any-promise": "promise-monofill",
        "build": "build",
        "ramda/src": "ramda/es",
      },
      "extensions": Array [
        ".js",
        ".jsx",
        ".ts",
        ".tsx",
      ],
    },
    "target": "node",
  },
}
`;
